--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -187,6 +187,7 @@ if (WIN32)
   add_dependency_external_projects(neuron)
   add_dependency_external_projects(wasapi)
   add_dependency_external_projects(steamworks)
+  add_dependency_external_projects(tensorFlow)
 endif()
 
 # include OPENSSL
