--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -26,6 +26,8 @@ if (NOT SERVER_ONLY AND NOT ANDROID)
   add_subdirectory(${DIR})
   set(DIR "hifiNeuron")
   add_subdirectory(${DIR})
+  set(DIR "hifiTensorFlow")
+  add_subdirectory(${DIR})
   set(DIR "hifiKinect")
   add_subdirectory(${DIR})
   set(DIR "steamClient")
